Mean extraction fix
Updated since the last one was working

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ testfiles*
 local_test_persiann_css_extraction.ipynb
 local_test_persiann_css_cdr_extraction.ipynb
 local_test_gldas_extraction.ipynb
+gfs_test.ipynb
