--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ local_test_persiann_css_extraction.ipynb
 local_test_persiann_css_cdr_extraction.ipynb
 local_test_gldas_extraction.ipynb
 gfs_test.ipynb
+local_tests.ipynb
