dotenv template edited
Co-Authored-By: Christopher Paredes <24547950+cppa@users.noreply.github.com>

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
+# template
 PROJECT_PATH = ''
 GITHUB_PATH = ''
 OBSERVED_PRODUCTS_PATH = 'observed'
 FORECASTED_PRODUCTS_PATH = 'forecasted'
 PROCESSING_PATH = ''
-HIDROCL_ROOT_PATH = "/home/modelo_test"
+HIDROCL_ROOT_PATH = ''
+REPORT_EMAILS = em@ai.l,em2@ai.l
