--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-cdsapi~=0.7.2
-requests~=2.28.1
+cdsapi~=0.7.3
+requests>=2.32
 pandas~=1.4.3
 xarray~=0.20.1
 beautifulsoup4~=4.11.1
@@ -13,3 +13,4 @@ geopandas~=0.11.1
 wget~=3.2
 exactextract~=0.2.0.dev0
 python-dotenv~=1.0.0
+netcdf4~=1.7
